fix planter name alignment

--- a/client/src/components/Planter/Planter.scss
+++ b/client/src/components/Planter/Planter.scss
@@ -17,6 +17,8 @@
     &__wrapper{
         display: flex;
         width: 100%;
+        margin-top: auto;
+        margin-bottom: 0;
     }
 
     &__name-wrapper{
@@ -42,6 +44,8 @@
         margin-left: auto;
         margin-right: auto;
         margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+        padding: 0.2rem;
     }
     &__add{
         width: 40px;
